# CLI

./:  pyproject.toml  .gitignore  CMakeLists.txt  Doxyfiledoxygen  Makefile  README.md  build.bat  build.ps1  main.c  make.bat  requirements.txt  run.ps1  setup.py  setup_extension.py
.github/workflows/: ci.yml
Addition/: Add.c  Add.h
OpHandler/: OpHandler.c  OpHandler.h
docs/: api.rst  c_backend.rst  conf.py  index.rst
src/: __init__.py
src/c/: module.c
src/c/Addition/: Add.c  Add.h
src/c/Division/: Div.c  Div.h
src/c/Multiplication/: Multi.c  Multi.h
src/c/OpHandler/: OpHandler.c  OpHandler.h  op_handler.c  op_handler.h
src/c/Subtraction/: Sub.c  Sub.h
src/python/calculator/: __init__.py  _c_calculator.pyd  calculator.py  cli.py
src/python/cli_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python/cli_calculator_A_Team.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_c_operations.c  test_python.py
