cmake_minimum_required(VERSION 3.20)
project(CLI_module C)
set(CMAKE_C_STANDARD 11)
find_package(Python3 COMPONENTS Development REQUIRED)
include_directories(${Python3_INCLUDE_DIRS})

add_library(CLI_module SHARED main.c Addition/Add.h Addition/Add.c Division/Div.h Division/Div.c Multiplication/Multi.h Multiplication/Multi.c Subtraction/Sub.c OpHandler/OpHandler.h OpHandler/OpHandler.c)
target_link_libraries(CLI_module PRIVATE ${Python3_LIBRARIES})
set_target_properties(CLI_module PROPERTIES SUFFIX ".pyd")
set_target_properties(CLI_module PROPERTIES PREFIX "")
